# Cartan

./: Cartan working.ipynb  Cartan.ipynb  README.md  pyproject.toml
Iterative Cartan/: Cartan.py  Iterative Cartan.ipynb
notebooks/: involutionless_time_evolution.ipynb  iterative_cartan.ipynb  scratch.ipynb
src/cartan/: __init__.py  pauli_operations.py  time_evolution.py
src/cartan/algebras/: __init__.py  cartan.py  involutionless_cartan.py  iterative_cartan.py
src/cartan/circuits/: __init__.py  tfim_circuits.py  utils.py
src/cartan/decompositions/: cartan.py  involutionless_cartan.py  iterative_cartan.py
src/cartan/hamiltonians/: __init__.py  cartan.py  iterative_cartan.py
src/cartan/optimizers/: __init__.py  cartan_optimizer.py  iterative_optimizer.py
src/cartan/pauli_helpers/: cartan_optimizer.py
src/hamiltonians/: cartan.py  involutionless_cartan.py  iterative_cartan.py  time_evolution.py
src/pauli_helpers/: cartan_optimizer.py  pauli_operations.py
src/test/: test.ipynb
tests/: test.ipynb
