[project]
name = "cartan"
requires-python = ">=3.11"
# requires-python = ">=3.9"
description = "Cartan"
version = "0.1.0"
authors = [
    { name = "Omar Alsheikh", email = "ooalshei@ncsu.edu" }
]
dependencies = [
    "numpy",
    "scipy",
    "qiskit",
]

[project.optional-dependencies]
dev = [
    "tox",
    "pre-commit",
    "bump2version",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[[tool.mypy.overrides]]
module = "scipy.*"
ignore_missing_imports = true
